--- a/topicos-avancados-de-programacao/2022-03-16/css/style.css
+++ b/topicos-avancados-de-programacao/2022-03-16/css/style.css
@@ -80,7 +80,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url("../img/background.jpg");
+    background-image: url(../img/background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
